--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -53,13 +53,24 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       run: ./packageAnalysis.sh
 
-    - name: Publishing
-      env:
-#        DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_REGISTRY_USER }}
-#        DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_USERNAME }}
-         DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: ./publish.sh
+    - name: Login to GitHub Container Registry
+        uses: docker/build-push-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          repository:  fabiobo2005/phonebook
+          tags: ${{ github.sha }}
+          dockerfile: Dockerfile
+   
+
+#     - name: Publishing
+#       env:
+#         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_REGISTRY_USER }}
+#         DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+#         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_USERNAME }}
+#         DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+#       run: ./publish.sh
 
     - name: Deploy
       env:
