--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -54,14 +54,14 @@ jobs:
       run: ./packageAnalysis.sh
 
     - name: Login to GitHub Container Registry
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         repository:  fabiobo2005/phonebook
         tags: ${{ github.sha }}
-        dockerfile: Dockerfile
+        dockerfile: ./backend/Dockerfile
    
 
 #     - name: Publishing
