--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -3,7 +3,7 @@ name: New features
 on:
   push:
     branches:
-      - "feature/*"
+      - "feature"
     paths-ignore:
       - "LICENSE"
       - "*.md"
@@ -25,7 +25,19 @@ jobs:
     - name: Compile, Build and Test
       run: ./build.sh
       
-    - name: slack_action
-      uses: megamegax/slack_action@0.2.2
+    # - name: slack_action
+    #   uses: megamegax/slack_action@0.2.2
+    #   with:
+    #     webHook: https://hooks.slack.com/services/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
+
+
+    - name: Login to GitHub Container Registry
+      uses: docker/build-push-action@v2
       with:
-        webHook: https://hooks.slack.com/services/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
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        repository:  fabiobo2005/phonebook
+        tags: ${{ github.sha }}
+#        dockerfile: ./backend/Dockerfile
+    run: docker-compose -f ./iac/docker-compose.yml push
