--- a/.github/workflows/feature2.yml
+++ b/.github/workflows/feature2.yml
@@ -31,6 +31,15 @@ jobs:
         name: Compile, Build and Test
         run: ./build.sh
       - 
+        name: Build Frontend Image and Test
+        run: docker build -f ./frontend/Dockerfile
+      - 
+        name: Build Database Image and Test
+        run: docker build -f ./database/Dockerfile
+      - 
+        name: Build Backend Image and Test
+        run: docker build -f ./backend/Dockerfile                
+      - 
         name: Publishing
 #        env:
 #         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_REGISTRY_USER }}
