--- a/.github/workflows/feature2.yml
+++ b/.github/workflows/feature2.yml
@@ -32,10 +32,10 @@ jobs:
         run: ./build.sh
       - 
         name: Build Frontend Image and Test
-        run: docker build ./frontend/Dockerfile .
+        run: docker build -f ./frontend/Dockerfile .
       - 
         name: Build Database Image and Test
-        run: docker build ./database/Dockerfile .
+        run: docker build -f ./database/Dockerfile .
       - 
         name: Build Backend Image and Test
         run: docker build -f ./backend/Dockerfile .               
