--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,14 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+    -
+      name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Set up Project Files
       uses: actions/checkout@v2
       with:
@@ -53,24 +61,8 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       run: ./packageAnalysis.sh
 
-    - name: Login to GitHub Container Registry
-      uses: docker/build-push-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        repository:  fabiobo2005/phonebook
-        tags: ${{ github.sha }}
-        dockerfile: ./backend/Dockerfile
-   
-
-#     - name: Publishing
-#       env:
-#         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_REGISTRY_USER }}
-#         DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-#         DOCKER_REGISTRY_USER: ${{ secrets.DOCKER_USERNAME }}
-#         DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-#       run: ./publish.sh
+     - name: Publishing
+       run: ./publish.sh
 
     - name: Deploy
       env:
