Update feature2.yml - ci

--- a/.github/workflows/feature2.yml
+++ b/.github/workflows/feature2.yml
@@ -27,7 +27,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-             
+      - 
+        name: Compile, Build and Test
+        run: ./build.sh       
       - 
         name: Publishing
 #        env:
