--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,7 +12,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - name: Login to GHCR.IO
+    - name: Login to Github Container Registry
       uses: docker/login-action@v1
         with:
           registry: ghcr.io
