--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -49,8 +49,8 @@ jobs:
           -Dsonar.organization=fabiobo2005
           -Dsonar.projectKey=fabiobo2005_phonebook
           -Dsonar.sources=src/main/java,src/main/webapp,src/main/resources/static
-          -Dsonar.test.exclusions=**/ServletInitializer*, **/DemoApplication*
-          -Dsonar.coverage.exclusions=**/ServletInitializer*, **/DemoApplication*
+          -Dsonar.test.exclusions=**/ServletInitializer*
+          -Dsonar.coverage.exclusions=**/ServletInitializer*
           -Dsonar.tests=tests/
           -Dsonar.verbose=true
       env:
