--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,9 +3,9 @@ name: "CodeQL"
 on:
   push:
     branches:
-      - main
-      - develop
-      - feature
+      - main_
+      - develop_
+      - feature_
   pull_request:
     # The branches below must be a subset of the branches above
     branches:
