--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -52,7 +52,7 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: test backend --severity-threshold=high
+        args: test --severity-threshold=high
 
     # - name: Libraries Analysis - SAST (White-box testing) - Snyk
     #   env:
