--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -49,10 +49,15 @@ jobs:
 
     - name: Libraries Analysis - SAST (White-box testing) - Run Snyk to check for vulnerabilities
       uses: snyk/actions/gradle-jdk11@master
+      continue-on-error: true # To make sure that SARIF upload gets called
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: backend --severity-threshold=high
+        args: --sarif-file-output=snyk.sarif
+    - name: Upload result to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: snyk.sarif
 
     # - name: Libraries Analysis - SAST (White-box testing) - Snyk
     #   env:
