master.yml workflow update

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,8 +8,7 @@ on:
       - "LICENSE"
       - "*.md"
 jobs:
-  job1:
-  analyze:
+  analyze_codeql:
     name: Analyze
     runs-on: ubuntu-latest
     permissions:
@@ -55,10 +54,11 @@ jobs:
     #   make release
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1 
-  job2:
-    needs: job1
-  run:
+      uses: github/codeql-action/analyze@v1
+#---  
+
+  build_compile_deploy:
+    needs: [analyze_codeql]
     runs-on: ubuntu-latest
     steps:
     - name: Login to Github Container Registry
@@ -145,7 +145,7 @@ jobs:
     - uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: snyk.sarif
-        
+
     # - name: Package Analysis - SAST (White-box testing)
     #   env:
     #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
