--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -107,29 +107,29 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew jacocoTestReport  sonarqube --stacktrace -i
 
-    - name: Libraries Analysis - SAST (White-box testing) - Run Snyk to check for vulnerabilities
-      uses: snyk/actions/gradle-jdk11@master
-      continue-on-error: true # To make sure that SARIF upload gets called
+    # - name: Libraries Analysis - SAST (White-box testing) - Run Snyk to check for vulnerabilities
+    #   uses: snyk/actions/gradle-jdk11@master
+    #   continue-on-error: true # To make sure that SARIF upload gets called
+    #   env:
+    #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    #   with:
+    #     args: --sarif-file-output=snyk.sarif
+    #     json: true
+
+    # - uses: actions/upload-artifact@v2
+    #   with:
+    #     name: SARIF
+    #     path: snyk.sarif 
+
+    - name: Libraries Analysis - SAST (White-box testing) - Snyk
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --sarif-file-output=snyk.sarif
-        json: true
-    - uses: garethr/snyk-to-sarif@master
-    - uses: actions/upload-artifact@v2
-      with:
-        name: SARIF
-        path: snyk.sarif 
+      run: ./librariesAnalysis.sh
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: snyk.sarif
-
-    # - name: Libraries Analysis - SAST (White-box testing) - Snyk
-    #   env:
-    #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-    #   run: ./librariesAnalysis.sh
       
     - name: Packaging
       run: ./package.sh
