success and failure slack messages

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -135,13 +135,32 @@ jobs:
         LINODE_TOKEN: ${{ secrets.LINODE_TOKEN }}
       run: ./deploy.sh
   
-#---  
-  post_slack_message:
+  success-notification:
+    if: success()
+    name: success-notification
+    needs: [analyze_codeql, build_compile_deploy]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: rtCamp/action-slack-notify@v2.0.0
-    env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_USERNAME: Fabio Oliveira 
-        SLACK_CHANNEL: phonebook-demo-java-app
+      - name: Checkout Code
+        uses: actions/checkout@v2.3.4
+
+      - uses: reside-eng/workflow-status-notification-action@v1.0.7
+        with:
+          current-status: "success"
+          slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+
+  failure-notification:
+    if: failure()
+    name: failure-notification
+    needs: [analyze_codeql, build_compile_deploy]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2.3.4
+
+      - uses: reside-eng/workflow-status-notification-action@v1.0.7
+        with:
+          current-status: "failure"
+          slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}" 
