--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -144,8 +144,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2.3.4
 
-      - uses: reside-eng/workflow-status-notification-action@v1.0.7
+      - uses: slackapi/slack-github-action@v1.16.0
         with:
+          slack-message: !!! Success !!!
           current-status: "success"
           slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
@@ -158,9 +159,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2.3.4
-
-      - uses: reside-eng/workflow-status-notification-action@v1.0.7
+      - uses: slackapi/slack-github-action@v1.16.0
         with:
+          slack-message: !!! Failed !!!
           current-status: "failure"
           slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
-          github-token: "${{ secrets.GITHUB_TOKEN }}" 
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
