--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -146,7 +146,7 @@ jobs:
 
       - uses: slackapi/slack-github-action@v1.16.0
         with:
-          slack-message: !!! Success !!!
+          slack-message: Success !!!
           current-status: "success"
           slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
@@ -161,7 +161,7 @@ jobs:
         uses: actions/checkout@v2.3.4
       - uses: slackapi/slack-github-action@v1.16.0
         with:
-          slack-message: !!! Failed !!!
+          slack-message: Failed !!!
           current-status: "failure"
           slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
