--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -46,3 +46,34 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       run: ./packageAnalysis.sh
+
+  success-notification:
+    if: success()
+    name: success-notification
+    needs: [run]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2.3.4
+
+      - uses: reside-eng/workflow-status-notification-action@v1.0.0
+        with:
+          #slack-message: Success !!!
+          current-status: "success"
+          slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+
+  failure-notification:
+    if: failure()
+    name: failure-notification
+    needs: [run]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2.3.4
+      - uses: reside-eng/workflow-status-notification-action@v1.0.0
+        with:
+          #slack-message: Failed !!!
+          current-status: "failure"
+          slack-webhook: "${{ secrets.SLACK_WEBHOOK }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
